Added partials for footer, navbar and topbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,15 @@
     <title>BT Real Estate</title>
 </head>
 <body>
+    <!-- Top Bar -->
+    {% include 'partials/_topbar.html' %}
+    <!-- Nav Bar -->
+    {% include 'partials/_navbar.html' %}
+    <!-- Main content -->
     {% block content %} {% endblock %}
+    <!-- Footer -->
+    {% include 'partials/_footer.html' %}
+    
     <script src="{% static 'js/jquery-3.3.1.min.js' %} "></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %} "></script>
     <script src="{% static 'js/main.js' %} "></script>
