--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -29,10 +29,10 @@
   </section>
 
   <!-- Listings -->
+  <!-- Documentation for django Pagination: https://docs.djangoproject.com/en/3.1/topics/pagination/ --> 
   <section id="listings" class="py-4">
     <div class="container">
       <div class="row">
-
         {% if listings %}
           {% for listing in listings %}
                         <!-- Listing -->
@@ -73,7 +73,7 @@
                       <i class="fas fa-clock"></i> {{ listing.list_date | timesince }}</div>
                   </div>
                   <hr>
-                  <a href="listing.html" class="btn btn-primary btn-block">More Info</a>
+                  <a href="{% url 'listing' listing.id %}" class="btn btn-primary btn-block">More Info</a>
                 </div>
               </div>
             </div>
@@ -83,30 +83,49 @@
             <p>No Listings Available</p>
           </div>
         {% endif %}
-
       </div>
 
+      <!-- Pagination -->
       <div class="row">
         <div class="col-md-12">
+          {% if listings.has_other_pages %}
           <ul class="pagination">
-            <li class="page-item disabled">
-              <a class="page-link" href="#">&laquo;</a>
-            </li>
-            <li class="page-item active">
-              <a class="page-link" href="#">1</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">2</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">3</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">&raquo;</a>
-            </li>
+            {% if listings.has_previous %}
+              <li class="page-item">
+                <a href="?page={{ listings.previous_page_number }}" class="page-link">&laquo;</a>
+              </li>
+            {% else %}
+              <li class="page-item disabled">
+                <a class="page-link">&laquo;</a>
+              </li>
+            {% endif %}
+
+            {% for i in listings.paginator.page_range %}
+              {% if listings.number == i %}
+                <li class="page-item active">
+                  <a class="page-link">{{ i }}</a>
+                </li>
+              {% else %}
+                <li class="page-item">
+                  <a href="?page={{ i }}" class="page-link">{{ i }}</a>
+                </li>
+              {% endif %}
+            {% endfor %}
+
+            {% if listings.has_next %}
+              <li class="page-item">
+                <a href="?page={{ listings.next_page_number }}" class="page-link">&raquo;</a>
+              </li>
+            {% else %}
+              <li class="page-item disabled">
+                <a class="page-link">&raquo;</a>
+              </li>
+            {% endif %}
           </ul>
+          {% endif %}
         </div>
       </div>
+      <!-- End Pagination -->
     </div>
   </section>
 {% endblock %}
