Added register functionality and alterts

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -65,6 +65,9 @@
     </div>
   </section>
 
+  <!-- Alerts -->
+  {% include 'partials/alerts.html' %}
+
   <!-- Listings -->
   <section id="listings" class="py-5">
     <div class="container">
