--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <!-- Lightbox -->
     <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
-    <title>BT Real Estate</title>
+    <title>BT Real Estate {% block title %}{% endblock %}</title>
 </head>
 <body>
     <!-- Top Bar -->
