--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,6 +2,9 @@
 {% load static %}
 
 {% load humanize %}
+
+{% block title %} | Welcome{% endblock %}
+
 {% block content %}
   <!-- Showcase -->
   <section id="showcase">
@@ -64,9 +67,9 @@
       </div>
     </div>
   </section>
-
+<br>
   <!-- Alerts -->
-  {% include 'partials/alerts.html' %}
+  {% include 'partials/_alerts.html' %}
 
   <!-- Listings -->
   <section id="listings" class="py-5">
