Updates to contacts functionality and listings

--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -30,6 +30,9 @@
     </div>
   </section>
 
+  <!-- Alerts -->
+  <!-- {% include 'partials/_alerts.html' %} -->
+
   <!-- Listings -->
   <!-- Documentation for django Pagination: https://docs.djangoproject.com/en/3.1/topics/pagination/ --> 
   <section id="listings" class="py-4">
